services/greeter/overlays/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeter-ingress
spec:
  rules:
    - host: staging.minikube.kube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greeter
                port:
                  number: 4242
